--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Newapp</title>
+  <title>Shakespeare Schwarzenegger</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <div id="output" style="height: 200px; overflow: auto; width: 100%;"></div>
 </body>
+<!-- <script>
+    var output = document.getElementById('output');
+
+    var xhr = new XMLHttpRequest();
+
+    xhr.open('GET', 'https://console.tke-2.openshift.com/api/v1/namespaces/tc-mongodb-dev/pods/user-manager-4-srsp6/log?follow=true');
+    xhr.setRequestHeader('authorization', 'Bearer O-ii9pEDiQRB1zGaGpNnRaRp0Utx49SRlEkvxJjR2pA');
+    xhr.send();
+
+    setInterval(function() {
+        output.textContent = xhr.responseText;
+    }, 1000);
+</script> -->
 </html>
